--- a/Rocket.toml
+++ b/Rocket.toml
@@ -21,33 +21,36 @@ enable_prometheus = false
 email_template_dir = "dist/email-templates"
 
 [staging]
-base-URI = "https://keys.openpgp.org"
-from = "noreply@keys.openpgp.org"
-x-accel-redirect = true
+base-URI = "http://localhost:8080"
+# base-URI-Onion = "http://localhost:8080"
+from = "noreply@localhost"
+x-accel-redirect = false
 token_secret = "hagrid"
 token_validity = 3600
+# NOTE: there is an index in my templates file index.html.mbs
 template_dir = "templates"
+assets_dir = "public/assets"
 keys_internal_dir = "keys"
 keys_external_dir = "public/keys"
-assets_dir = "public/assets"
 token_dir = "tokens"
 tmp_dir = "tmp"
-mail_rate_limit = 60
+mail_rate_limit = 3600
 maintenance_file = "maintenance"
 enable_prometheus = false
 email_template_dir = "email-templates"
 
 [release]
-base-URI = "https://keys.lotta.gay"
-base-URI-Onion = "https://keys.lotta.gay"
-from = "mail@lotta.gay"
-x-accel-redirect = true
-token_secret = "generated production secret"
+base-URI = "http://localhost:8080"
+# base-URI-Onion = "http://localhost:8080"
+from = "noreply@localhost"
+x-accel-redirect = false
+token_secret = "hagrid"
 token_validity = 3600
+# NOTE: there is an index in my templates file index.html.mbs
 template_dir = "templates"
+assets_dir = "public/assets"
 keys_internal_dir = "keys"
 keys_external_dir = "public/keys"
-assets_dir = "public/assets"
 token_dir = "tokens"
 tmp_dir = "tmp"
 mail_rate_limit = 3600
